Login/Register gestion

--- a/CoralieHotel/appsettings.json
+++ b/CoralieHotel/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefautConnection": "Server=FANTOMAS007\\SQLEXPRESS;Database=CoralieHotelDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
